set columns in event entity for remaining tickets and allocated slots